--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
     text-align: center;
     width: 100vw;
+    min-height: 100vh;
+    background-color: #05bccb;
+    padding-bottom: 50px;
 }
 
 button {
@@ -24,24 +27,10 @@ h2,
 h3,
 h4,
 h5 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Saira', sans-serif;
 }
 
-.nav-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 5vh;
-    background-color: black;
-}
-
-.nav-bar button {
-    background-color: transparent;
-    border: none;
-    color: white;
-}
-
-.card-outer-container {
+/* .card-outer-container {
     display: flex;
     height: auto;
     padding: 20px;
@@ -49,11 +38,26 @@ h5 {
     margin: auto;
     margin-top: -50px;
     border-radius: 30px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
-    transition: ease 0.5s;
-    border: 1px solid rgba(216, 216, 216, 0.5);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    transition: ease 0.15s;
+    border: 1px solid rgba(216, 216, 216, 0.9);
     position: relative;
     transition: ease 0.3s;
+} */
+
+.card-outer-container {
+    display: flex;
+    height: auto;
+    padding: 20px;
+    background-color: white;
+    margin: auto;
+    /* margin-top: -50px; */
+    /* border-radius: 30px; */
+    /* box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); */
+    transition: ease 0.15s;
+    /* border: 1px solid rgba(216, 216, 216, 0.9); */
+    position: relative;
+    /* transition: ease 0.3s; */
 }
 
 .card-outer-container.narrow {
@@ -76,7 +80,43 @@ h5 {
 }
 
 .cover {
+    box-sizing: border-box;
     width: 100vw;
     height: 40vh;
-    background-color: rgb(158, 205, 250);
+    background-color: black;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0 50px;
+    /* background-image: url('./frontend/assets/images/dark-tire.png'); */
+}
+
+.cover h4 {
+    color: white;
+    margin: 3% 0 0;
+    font-size: 2vh;
+    font-family: IBM Plex Mono, sans-serif;
+}
+
+.cover svg {
+    height: 60%;
+    fill: #05bccb;
+    /* fill: white; */
+}
+
+.cover img {
+    min-width: 100%;
+    min-height: calc(100% + 100px);
+    object-fit: cover;
+}
+
+@media only screen and (max-width: 1030px) {
+    .card-outer-container,
+    .card-outer-container.wide,
+    .card-outer-container.narrow,
+    .card-outer-container#true {
+        width: 80vw;
+    }
 }
