--- a/src/frontend/components/Blogs/Blogs.css
+++ b/src/frontend/components/Blogs/Blogs.css
@@ -27,10 +27,6 @@
     border: 1px solid rgba(216, 216, 216, 0.5);
 }
 
-
-
-
-
 .blog-container {
     box-sizing: border-box;
     height: 400px;
@@ -62,8 +58,15 @@
 }
 
 .blog-thumbnail {
-    background-color: rgb(158, 205, 250);
+    background-color: black;
     transition: ease 3s;
+}
+
+.blog-thumbnail img {
+    width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    transition: ease 0.5s;
 }
 
 .blog-title h2 {
@@ -107,4 +110,38 @@
 
 .blogs-card-outer-container h1 {
     width: 100%;
+}
+
+@media only screen and (max-width: 1030px) {
+    .blog-container {
+        grid-template-rows: 125px 225px;
+        height: 350px;
+        width: 350px;
+    }
+    .blog-info {
+        grid-template-rows: 50px 50px 75px 50px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .blog-container {
+        grid-template-rows: 150px 250px;
+        height: 400px;
+        min-width: 450px;
+    }
+    .blog-info {
+        grid-template-rows: 50px 50px 100px 50px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .blog-container {
+        grid-template-rows: 100px 200px;
+        height: 300px;
+        min-width: 300px;
+        width: 300px;
+    }
+    .blog-info {
+        grid-template-rows: 50px 50px 50px 50px;
+    }
 }
